fix: ignore error return value for sqlDB.Close in tests
